@startuml class diagram

enum Gender {
    +Male
    +Female
}

class App {
    +tree: FamilyTree
    +commandUtil: CommandUtil
    +runCommands(commands: string[]): void
}

class CommandUil {
    +commandSet: {[key: string]: number}
    +isValidCommand(command: string): boolean
    +execute(command: string, tree: FamilyTree): string
    +readFile(filePath: string): string[]
}

class Relationship {
    +find(tree: FamilyTree, name: string, relationship: string): string
    -getSibling(member: FamilyMember, siblingGender: Gender): string[]
    -getSiblingSpouse(member: FamilyMember, spouseGender: Gender): string[]
    -getChild(member: FamilyMember, childGender: Gender): string[]
}

class FamilyTreeBuilder {
    -_king: FamilyMember
    -_queen: FamilyMember
    -_tree: FamilyTree
    -_filePath: string
    +build(): FamilyTree
    +get king(): FamilyMember
    +get queen(): FamilyMember
}

class FamilyTree {
    +king: FamilyMember
    +queen: FamilyMember
    -hashMembers: { [key: string]: FamilyMember }
    +addKingQueen(kingName: string, queenName: string): string 
    +addChild(montherName: string, childName: string, gender: string): string
    +addSpouse(name: string, spouseName: string, gender: string): string
    -findFamilyMember(name: string): FamilyMember
}

class FamilyMember {
    +name: string
    +gender: Gender
    +spouse: FamilyMember
    +child: Child[]
    +father: FamilyMember 
    +mother: FamilyMember 
    +addSpouse(spouse: FamilyMember): void
    +addChild(childName: string, genter: string): FamilyMember
}

FamilyTree "1..*" o-- "*" FamilyMember
FamilyTree o-- FamilyTreeBuilder

@enduml